--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
+scikit-learn==1.3.2
+joblib==1.3.2
+streamlit==1.39.0
+numpy==1.26.4
 pandas==2.2.2
-scikit-learn==1.6.1
-matplotlib==3.10.0
-seaborn==0.13.2
